--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $primary-color: #b97e8a;
 // Secondary Colors
 $of-grey: #f4f4f4;
 $of-pink: #fff0f0;
-$dark-pink: #744249c0;
+$dark-pink: #63383dc0;
 $light-pink: #dd9fab;
 $text-grey: #585858;
 // Other Colors
