--- a/scss/components/_contact-form.scss
+++ b/scss/components/_contact-form.scss
@@ -15,7 +15,7 @@
     color: $primary-color;
     position: relative;
     margin-bottom: 0.4rem;
-    opacity: .4;
+    opacity: 1;
     &::after {
       content: '';
       position: absolute;
