--- a/scss/components/_page-services.scss
+++ b/scss/components/_page-services.scss
@@ -27,7 +27,7 @@
     color: $primary-color;
     position: relative;
     margin-bottom: 0.4rem;
-    opacity: .4;
+    opacity: 1;
     &::after {
       content: '';
       position: absolute;
